<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.barname_nevis.opticalillusions.MainActivity"
    android:background="#ff96dfff"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="#ff635bff"

        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setting"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:textSize="35sp"
            android:id="@+id/action_bar_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_font"
        android:id="@+id/choose_font"
        android:layout_gravity="right"
        android:textColor="@color/black"
        android:layout_marginTop="50dp" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="right"
        android:inputType="text"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/kamran"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:button="@null"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/kamran_font"
            android:textColor="@color/black"
            android:textSize="20dip" />

        <RadioButton
            android:id="@+id/koodak"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/koodak_font"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/yekan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/yekan_font"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp">



        <Button
            android:background="@drawable/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_setting"
            android:id="@+id/save_setting"
            android:layout_gravity="center_horizontal"
            style="@style/button_text"
            android:layout_marginTop="50dp" />
    </RelativeLayout>


</LinearLayout>